[tool.poetry]
name = "zephcast"
version = "0.2.0"
description = "A messaging library supporting multiple backends"
authors = ["Zbigniew Mastylo <z.mastylo@protonmail.com>"]
readme = "README.md"
packages = [{include = "zephcast", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"  
aiokafka = "^0.10.0"
aio-pika = "^9.3.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
kafka-python = "^2.0.2"
types-redis = "^4.6.0.20241004"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pre-commit = "^4.0.1"
ruff = "^0.1.8"
mypy = "^1.7.0"
radon = "^6.0.1"
pytest-mypy-plugins = "^3.0.0"
pytest-timeout = "^2.2.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "timeout: mark test to timeout after given seconds"
]

[tool.ruff]
line-length = 100
target-version = "py39"  
select = [
    "E",   
    "F",   
    "I",   
    "N",   
    "W",   
    "B",   
    "C4",  
    "UP",  
    "RUF", 
    "TCH", 
    "TID", 
]
ignore = []

[tool.ruff.isort]
known-first-party = ["zephcast"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = []
mypy_path = "src"

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true
